test/parsetest/valid/NewArrayAndArrayAccess.java
class NewArrayAndArrayAccess {
    public void [] foo() {
        return new int [15][][][][1];
    }
}
