test/parsetest/invalid/wrong_block.java

class foo {
  public void a(int x) {
    public void x() {}
  }
}
